--- a/pages/video-detail.html
+++ b/pages/video-detail.html
@@ -15,254 +15,103 @@
         </div>
 
         <!-- 视频列表 -->
-        <div class="video-list">
-            <div class="video-item vertical-video">
-                <div class="video-thumbnail">
-                    <video src="../assets/videos/01 湿度测试V1D4+CM.mp4"></video>
-                    <div class="play-button">
-                        <svg width="60" height="60" viewBox="0 0 60 60">
-                            <circle cx="30" cy="30" r="28" fill="rgba(0,0,0,0.6)" stroke="white" stroke-width="2"/>
-                            <polygon points="23,18 23,42 42,30" fill="white"/>
-                        </svg>
-                    </div>
-                    <div class="video-controls">
-                        <button class="control-btn pause-btn" title="暂停">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                <rect x="6" y="4" width="4" height="16"/>
-                                <rect x="14" y="4" width="4" height="16"/>
-                            </svg>
-                        </button>
-                        <div class="control-right">
-                            <button class="control-btn mute-btn" title="静音">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                    <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
-                                </svg>
-                            </button>
-                            <button class="control-btn fullscreen-btn" title="全屏">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                    <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <h3>湿度测试V1D4+CM</h3>
-            </div>
-
-            <div class="video-item horizontal-video">
-                <div class="video-thumbnail">
-                    <video src="../assets/videos/02 UZIN PE 360 PLUS.mp4"></video>
-                    <div class="play-button">
-                        <svg width="60" height="60" viewBox="0 0 60 60">
-                            <circle cx="30" cy="30" r="28" fill="rgba(0,0,0,0.6)" stroke="white" stroke-width="2"/>
-                            <polygon points="23,18 23,42 42,30" fill="white"/>
-                        </svg>
-                    </div>
-                    <div class="video-controls">
-                        <button class="control-btn pause-btn" title="暂停">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                <rect x="6" y="4" width="4" height="16"/>
-                                <rect x="14" y="4" width="4" height="16"/>
-                            </svg>
-                        </button>
-                        <div class="control-right">
-                            <button class="control-btn mute-btn" title="静音">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                    <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
-                                </svg>
-                            </button>
-                            <button class="control-btn fullscreen-btn" title="全屏">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                    <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <h3>UZIN PE 360 PLUS</h3>
-            </div>
-
-            <div class="video-item horizontal-video">
-                <div class="video-thumbnail">
-                    <video src="../assets/videos/03 UZIN PE 460.mp4"></video>
-                    <div class="play-button">
-                        <svg width="60" height="60" viewBox="0 0 60 60">
-                            <circle cx="30" cy="30" r="28" fill="rgba(0,0,0,0.6)" stroke="white" stroke-width="2"/>
-                            <polygon points="23,18 23,42 42,30" fill="white"/>
-                        </svg>
-                    </div>
-                    <div class="video-controls">
-                        <button class="control-btn pause-btn" title="暂停">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                <rect x="6" y="4" width="4" height="16"/>
-                                <rect x="14" y="4" width="4" height="16"/>
-                            </svg>
-                        </button>
-                        <div class="control-right">
-                            <button class="control-btn mute-btn" title="静音">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                    <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
-                                </svg>
-                            </button>
-                            <button class="control-btn fullscreen-btn" title="全屏">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                    <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <h3>UZIN PE 460</h3>
-            </div>
-
-            <div class="video-item horizontal-video">
-                <div class="video-thumbnail">
-                    <video src="../assets/videos/04 UZIN PE 280.mp4"></video>
-                    <div class="play-button">
-                        <svg width="60" height="60" viewBox="0 0 60 60">
-                            <circle cx="30" cy="30" r="28" fill="rgba(0,0,0,0.6)" stroke="white" stroke-width="2"/>
-                            <polygon points="23,18 23,42 42,30" fill="white"/>
-                        </svg>
-                    </div>
-                    <div class="video-controls">
-                        <button class="control-btn pause-btn" title="暂停">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                <rect x="6" y="4" width="4" height="16"/>
-                                <rect x="14" y="4" width="4" height="16"/>
-                            </svg>
-                        </button>
-                        <div class="control-right">
-                            <button class="control-btn mute-btn" title="静音">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                    <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
-                                </svg>
-                            </button>
-                            <button class="control-btn fullscreen-btn" title="全屏">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                    <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <h3>UZIN PE 280</h3>
-            </div>
-
-            <div class="video-item horizontal-video">
-                <div class="video-thumbnail">
-                    <video src="../assets/videos/05 PE480+PE280.mov"></video>
-                    <div class="play-button">
-                        <svg width="60" height="60" viewBox="0 0 60 60">
-                            <circle cx="30" cy="30" r="28" fill="rgba(0,0,0,0.6)" stroke="white" stroke-width="2"/>
-                            <polygon points="23,18 23,42 42,30" fill="white"/>
-                        </svg>
-                    </div>
-                    <div class="video-controls">
-                        <button class="control-btn pause-btn" title="暂停">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                <rect x="6" y="4" width="4" height="16"/>
-                                <rect x="14" y="4" width="4" height="16"/>
-                            </svg>
-                        </button>
-                        <div class="control-right">
-                            <button class="control-btn mute-btn" title="静音">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                    <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
-                                </svg>
-                            </button>
-                            <button class="control-btn fullscreen-btn" title="全屏">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                    <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <h3>PE480+PE280</h3>
-            </div>
-
-            <div class="video-item horizontal-video">
-                <div class="video-thumbnail">
-                    <video src="../assets/videos/06 PE360+RR203+NC182.mov"></video>
-                    <div class="play-button">
-                        <svg width="60" height="60" viewBox="0 0 60 60">
-                            <circle cx="30" cy="30" r="28" fill="rgba(0,0,0,0.6)" stroke="white" stroke-width="2"/>
-                            <polygon points="23,18 23,42 42,30" fill="white"/>
-                        </svg>
-                    </div>
-                    <div class="video-controls">
-                        <button class="control-btn pause-btn" title="暂停">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                <rect x="6" y="4" width="4" height="16"/>
-                                <rect x="14" y="4" width="4" height="16"/>
-                            </svg>
-                        </button>
-                        <div class="control-right">
-                            <button class="control-btn mute-btn" title="静音">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                    <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
-                                </svg>
-                            </button>
-                            <button class="control-btn fullscreen-btn" title="全屏">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                    <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <h3>PE360+RR203+NC182</h3>
-            </div>
-
-            <div class="video-item horizontal-video">
-                <div class="video-thumbnail">
-                    <video src="../assets/videos/08 KR516.mp4"></video>
-                    <div class="play-button">
-                        <svg width="60" height="60" viewBox="0 0 60 60">
-                            <circle cx="30" cy="30" r="28" fill="rgba(0,0,0,0.6)" stroke="white" stroke-width="2"/>
-                            <polygon points="23,18 23,42 42,30" fill="white"/>
-                        </svg>
-                    </div>
-                    <div class="video-controls">
-                        <button class="control-btn pause-btn" title="暂停">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                <rect x="6" y="4" width="4" height="16"/>
-                                <rect x="14" y="4" width="4" height="16"/>
-                            </svg>
-                        </button>
-                        <div class="control-right">
-                            <button class="control-btn mute-btn" title="静音">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                    <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
-                                </svg>
-                            </button>
-                            <button class="control-btn fullscreen-btn" title="全屏">
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
-                                    <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
-                                </svg>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-                <h3>KR516</h3>
-            </div>
+        <div class="video-list" id="video-list">
+            <!-- 视频将通过JavaScript动态生成 -->
         </div>
     </div>
 
     <script>
         // 根据URL参数动态设置标题
         const urlParams = new URLSearchParams(window.location.search);
+        const parentCategory = urlParams.get('parentCategory');
         const category = urlParams.get('category');
-        if (category) {
-            const titleElement = document.querySelector('.video-category-title h2');
-            if (titleElement) {
-                titleElement.textContent = category;
+
+        // 加载JSON数据并生成页面内容
+        async function loadData() {
+            try {
+                const response = await fetch('../data/data.json');
+                const data = await response.json();
+
+                // 找到对应的分类和子分类
+                const categoryData = data.videoCategories.find(cat => cat.name === parentCategory);
+
+                if (!categoryData) {
+                    console.error('找不到父分类:', parentCategory);
+                    return;
+                }
+
+                const subcategoryData = categoryData.subcategories.find(sub => sub.name === category);
+
+                if (!subcategoryData) {
+                    console.error('找不到子分类:', category);
+                    return;
+                }
+
+                // 更新页面标题
+                const titleElement = document.querySelector('.video-category-title h2');
+                if (titleElement) {
+                    titleElement.textContent = category;
+                }
+                document.title = category + ' - UZIN优成';
+
+                // 生成视频列表
+                const videoList = document.getElementById('video-list');
+                const videos = subcategoryData.videos || [];
+
+                if (videos.length === 0) {
+                    videoList.innerHTML = '<p style="text-align: center; padding: 40px; color: #999;">暂无视频</p>';
+                    return;
+                }
+
+                videos.forEach(video => {
+                    const videoItem = document.createElement('div');
+                    videoItem.className = `video-item ${video.orientation === 'vertical' ? 'vertical-video' : 'horizontal-video'}`;
+                    videoItem.innerHTML = `
+                        <div class="video-thumbnail">
+                            <video src="${video.path}"></video>
+                            <div class="play-button">
+                                <svg width="60" height="60" viewBox="0 0 60 60">
+                                    <circle cx="30" cy="30" r="28" fill="rgba(0,0,0,0.6)" stroke="white" stroke-width="2"/>
+                                    <polygon points="23,18 23,42 42,30" fill="white"/>
+                                </svg>
+                            </div>
+                            <div class="video-controls">
+                                <button class="control-btn pause-btn" title="暂停">
+                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                        <rect x="6" y="4" width="4" height="16"/>
+                                        <rect x="14" y="4" width="4" height="16"/>
+                                    </svg>
+                                </button>
+                                <div class="control-right">
+                                    <button class="control-btn mute-btn" title="静音">
+                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                            <path d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02z"/>
+                                        </svg>
+                                    </button>
+                                    <button class="control-btn fullscreen-btn" title="全屏">
+                                        <svg width="24" height="24" viewBox="0 0 24 24" fill="white">
+                                            <path d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
+                                        </svg>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                        <h3>${video.title}</h3>
+                    `;
+                    videoList.appendChild(videoItem);
+                });
+
+                // 初始化视频播放功能
+                initVideoPlayers();
+
+            } catch (error) {
+                console.error('加载数据失败:', error);
             }
-            document.title = category + ' - UZIN优成';
         }
 
-        // 视频播放功能
-        document.querySelectorAll('.video-item').forEach(item => {
+        // 初始化视频播放功能
+        function initVideoPlayers() {
+            document.querySelectorAll('.video-item').forEach(item => {
             const video = item.querySelector('video');
             const thumbnail = item.querySelector('.video-thumbnail');
             const playButton = item.querySelector('.play-button');
@@ -401,6 +250,10 @@
             document.addEventListener('mozfullscreenchange', updateFullscreenIcon);
             document.addEventListener('MSFullscreenChange', updateFullscreenIcon);
         });
+        }
+
+        // 页面加载时执行
+        loadData();
     </script>
 </body>
 </html>
